--- a/MY_PGMB/py/py10/my10_pgmb.ini
+++ b/MY_PGMB/py/py10/my10_pgmb.ini
@@ -1,4 +1,3 @@
 [file]
-fg  = my10_input_group_cd.txt
-fgg = my10_input_group_ggcd.txt
-fgl = my10_input_group_list.txt
+fcd  = my10_input_group_cd.txt, my10_input_group_ggcd.txt
+fcm = my10_input_group_list.txt, my10_input_cm_root.txt
