MY10 리팩토리중 241019L v3

--- a/MY_PGMB/py/py10/my10_pgmb.ini
+++ b/MY_PGMB/py/py10/my10_pgmb.ini
@@ -1,3 +1,3 @@
 [file]
-fcd = my10_input_group_cd.txt, my10_input_group_ggcd.txt, my10_input_contents_cd_sample.txt
-fcm = my10_input_group_list.txt, my10_input_cm_root.txt, my10_input_contents_list_sample.txt
+fcd = my10_input_group_cd.txt, my10_input_group_ggcd.txt, my10_input_contents_cd.txt
+fcm = my10_input_group_list.txt, my10_input_cm_root.txt, my10_input_contents_list.txt
