--- a/MY_PGMB/py/py10/my10_pgmb.ini
+++ b/MY_PGMB/py/py10/my10_pgmb.ini
@@ -1,3 +1,3 @@
 [file]
-fcd = my10_input_group_cd.txt, my10_input_group_ggcd.txt, my10_input_contents_cd.txt
-fcm = my10_input_group_list.txt, my10_input_cm_root.txt, my10_input_contents_list.txt
+fcd = my10_input_cd_rootgg.txt, my10_input_cd_cg.txt, my10_input_cd_cc.txt
+fcm = my10_input_map_root.txt, my10_input_map_gg.txt, my10_input_map_cg.txt
