MY11 BLOG 개선중 250308L

--- a/MY_PGMB/py/py11_blog/my11_pgmb.ini
+++ b/MY_PGMB/py/py11_blog/my11_pgmb.ini
@@ -1,2 +1,3 @@
 [file]
-fcm = my10_input_map_root.txt, my10_input_map_gg.txt, my10_input_map_cg.txt
+fcm = my10_input_map_root.txt
+fcm_old = my10_input_map_root.txt, my10_input_map_gg.txt, my10_input_map_cg.txt
