MY11 BLOG 개선중 250308H

--- a/MY_PGMB/py/py11_blog/my11_pgmb.ini
+++ b/MY_PGMB/py/py11_blog/my11_pgmb.ini
@@ -1,3 +1,4 @@
 [file]
+fcd = my10_input_cd_cc.txt
 fcm = my10_input_map_root.txt
 fcm_old = my10_input_map_root.txt, my10_input_map_gg.txt, my10_input_map_cg.txt
